--- a/3 Feature Selection/3.0.0 SFS_df_Join_all.ipynb
+++ b/3 Feature Selection/3.0.0 SFS_df_Join_all.ipynb
@@ -77,6 +77,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Generated from Stepwise Regression\n",
+        "\n",
         "selected_columns = ['Butanol PPM', '425 SAO Al', 'FC42428', 'FC55003', 'FC55102', 'FC55152', 'FFC55555',\n",
         "       'LC55553', 'LC55557', 'LC55568', 'LC90366', 'TC55555']\n",
         "\n",
