--- a/3 Feature Selection/3.0.2 OLS_df_Join_all.ipynb
+++ b/3 Feature Selection/3.0.2 OLS_df_Join_all.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 23,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 25,
       "metadata": {
         "trusted": true
       },
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -73,16 +73,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
         "\n",
-        "selected_columns = ['Butanol PPM',\n",
-        "                    '425 SAO Al', 'FFC55555', 'FC55003', 'FC55569',\t\n",
-        "                    'TC55555', 'LC52572', 'LC55568', 'DI55152',\t\n",
-        "                    'FC55009', 'FC55102',\t\n",
-        "                    'LC55553', 'LC55557', 'LC90366'\n",
+        "selected_columns = ['Butanol PPM', '425 %Al', 'TC55552', 'DI55102', 'FC55569', 'DI55152',\n",
+        "       'FC55576', 'TI55017', 'FC42428', 'AYC55580', 'LC55555', 'TI55023',\n",
+        "       'FFC55553', 'FC55555', 'FC55009', 'LC55557', 'LC55553', 'FC55003',\n",
+        "       'FFC55555'\n",
+        "#                      ^^^^ From XGB with all variables as continous ^^^^\n",
+        "\n",
+        "#'Butanol PPM', <- Actuals ->\n",
+        "#                     '425 SAO Al', 'FFC55555', 'FC55003', 'FC55569',\t\n",
+        "#                     'TC55555', 'LC55568', 'DI55152',\t\n",
+        "#                     'FC55009', 'FC55102',\t\n",
+        "#                     'LC55553', 'LC55557', 'LC90366'\n",
         "                    ]\n",
         "\n",
         "existing_columns = [col for col in selected_columns if col in df_All.columns]\n",
@@ -91,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,19 +110,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['Butanol PPM', '425 SAO Al', 'FFC55555', 'FC55003', 'FC55569',\n",
-              "       'TC55555', 'LC52572', 'LC55568', 'DI55152', 'FC55009', 'FC55102',\n",
-              "       'LC55553', 'LC55557', 'LC90366'],\n",
+              "Index(['Butanol PPM', 'TC55552', 'DI55102', 'FC55569', 'DI55152', 'FC55576',\n",
+              "       'TI55017', 'FC42428', 'AYC55580', 'LC55555', 'TI55023', 'FFC55553',\n",
+              "       'FC55555', 'FC55009', 'LC55557', 'LC55553', 'FC55003', 'FFC55555'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -127,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -139,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -148,42 +154,46 @@
           "text": [
             "                                 OLS Regression Results                                \n",
             "=======================================================================================\n",
-            "Dep. Variable:            Butanol PPM   R-squared (uncentered):                   0.045\n",
-            "Model:                            OLS   Adj. R-squared (uncentered):              0.040\n",
-            "Method:                 Least Squares   F-statistic:                              9.949\n",
-            "Date:                Thu, 30 Nov 2023   Prob (F-statistic):                    9.70e-21\n",
-            "Time:                        08:05:11   Log-Likelihood:                         -21284.\n",
-            "No. Observations:                2770   AIC:                                  4.259e+04\n",
-            "Df Residuals:                    2757   BIC:                                  4.267e+04\n",
-            "Df Model:                          13                                                  \n",
+            "Dep. Variable:            Butanol PPM   R-squared (uncentered):                   0.047\n",
+            "Model:                            OLS   Adj. R-squared (uncentered):              0.041\n",
+            "Method:                 Least Squares   F-statistic:                              8.009\n",
+            "Date:                Thu, 30 Nov 2023   Prob (F-statistic):                    4.43e-20\n",
+            "Time:                        09:19:05   Log-Likelihood:                         -21281.\n",
+            "No. Observations:                2770   AIC:                                  4.260e+04\n",
+            "Df Residuals:                    2753   BIC:                                  4.270e+04\n",
+            "Df Model:                          17                                                  \n",
             "Covariance Type:            nonrobust                                                  \n",
             "==============================================================================\n",
             "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
             "------------------------------------------------------------------------------\n",
-            "425 SAO Al    13.5043     25.311      0.534      0.594     -36.126      63.135\n",
-            "FFC55555   -1539.1139    548.455     -2.806      0.005   -2614.538    -463.690\n",
-            "FC55003       -0.0807      0.015     -5.208      0.000      -0.111      -0.050\n",
-            "FC55569        0.0238      0.032      0.748      0.455      -0.039       0.086\n",
-            "TC55555        1.4469      3.394      0.426      0.670      -5.208       8.102\n",
-            "LC52572        3.2490      5.089      0.638      0.523      -6.729      13.227\n",
-            "LC55568       10.8908      9.381      1.161      0.246      -7.503      29.285\n",
-            "DI55152      745.7469    303.797      2.455      0.014     150.055    1341.439\n",
-            "FC55009        0.0175      0.019      0.904      0.366      -0.020       0.055\n",
-            "FC55102       -0.0003      0.002     -0.134      0.893      -0.004       0.003\n",
-            "LC55553       -2.7127      1.589     -1.708      0.088      -5.828       0.402\n",
-            "LC55557        1.5276      4.011      0.381      0.703      -6.338       9.393\n",
-            "LC90366       -0.7700      0.411     -1.875      0.061      -1.575       0.035\n",
+            "TC55552       -1.2761      1.008     -1.265      0.206      -3.253       0.701\n",
+            "DI55102      165.5401    203.581      0.813      0.416    -233.647     564.728\n",
+            "FC55569        0.0483      0.034      1.432      0.152      -0.018       0.115\n",
+            "DI55152       56.5175    360.657      0.157      0.875    -650.668     763.703\n",
+            "FC55576        0.0518      0.048      1.082      0.279      -0.042       0.146\n",
+            "TI55017       -0.3527      1.730     -0.204      0.838      -3.745       3.039\n",
+            "FC42428        0.0004      0.004      0.111      0.912      -0.007       0.008\n",
+            "AYC55580       1.5350      2.400      0.640      0.522      -3.170       6.240\n",
+            "LC55555        3.8148      1.330      2.868      0.004       1.206       6.423\n",
+            "TI55023        0.4212      2.273      0.185      0.853      -4.035       4.878\n",
+            "FFC55553     424.3005    322.428      1.316      0.188    -207.924    1056.525\n",
+            "FC55555        0.0005      0.006      0.080      0.937      -0.011       0.012\n",
+            "FC55009        0.0122      0.024      0.499      0.618      -0.036       0.060\n",
+            "LC55557        7.9824      4.542      1.758      0.079      -0.923      16.888\n",
+            "LC55553       -3.4861      1.718     -2.029      0.043      -6.855      -0.117\n",
+            "FC55003       -0.0733      0.016     -4.487      0.000      -0.105      -0.041\n",
+            "FFC55555   -1128.0375    603.887     -1.868      0.062   -2312.154      56.079\n",
             "==============================================================================\n",
-            "Omnibus:                     6441.359   Durbin-Watson:                   1.605\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         54008667.565\n",
-            "Skew:                          22.334   Prob(JB):                         0.00\n",
-            "Kurtosis:                     685.605   Cond. No.                     2.47e+06\n",
+            "Omnibus:                     6428.253   Durbin-Watson:                   1.608\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         53178925.566\n",
+            "Skew:                          22.227   Prob(JB):                         0.00\n",
+            "Kurtosis:                     680.333   Cond. No.                     2.78e+06\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
             "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
             "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "[3] The condition number is large, 2.47e+06. This might indicate that there are\n",
+            "[3] The condition number is large, 2.78e+06. This might indicate that there are\n",
             "strong multicollinearity or other numerical problems.\n"
           ]
         }
@@ -200,14 +210,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['425 SAO Al', 'FC55569', 'TC55555', 'LC52572', 'LC55568', 'FC55009', 'FC55102', 'LC55553', 'LC55557', 'LC90366']\n"
+            "['TC55552', 'DI55102', 'FC55569', 'DI55152', 'FC55576', 'TI55017', 'FC42428', 'AYC55580', 'TI55023', 'FFC55553', 'FC55555', 'FC55009', 'LC55557', 'FFC55555']\n"
           ]
         }
       ],
@@ -231,24 +241,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                   coef  std err      t  P>|t|  [0.025  0.975]\n",
-            "0   425 SAO Al  13.5043   25.311  0.534  0.594 -36.126  63.135\n",
-            "3      FC55569   0.0238    0.032  0.748  0.455  -0.039   0.086\n",
-            "4      TC55555   1.4469    3.394  0.426  0.670  -5.208   8.102\n",
-            "5      LC52572   3.2490    5.089  0.638  0.523  -6.729  13.227\n",
-            "6      LC55568  10.8908    9.381  1.161  0.246  -7.503  29.285\n",
-            "8      FC55009   0.0175    0.019  0.904  0.366  -0.020   0.055\n",
-            "9      FC55102  -0.0003    0.002 -0.134  0.893  -0.004   0.003\n",
-            "10     LC55553  -2.7127    1.589 -1.708  0.088  -5.828   0.402\n",
-            "11     LC55557   1.5276    4.011  0.381  0.703  -6.338   9.393\n",
-            "12     LC90366  -0.7700    0.411 -1.875  0.061  -1.575   0.035\n"
+            "                   coef  std err      t  P>|t|    [0.025    0.975]\n",
+            "0    TC55552    -1.2761    1.008 -1.265  0.206    -3.253     0.701\n",
+            "1    DI55102   165.5401  203.581  0.813  0.416  -233.647   564.728\n",
+            "2    FC55569     0.0483    0.034  1.432  0.152    -0.018     0.115\n",
+            "3    DI55152    56.5175  360.657  0.157  0.875  -650.668   763.703\n",
+            "4    FC55576     0.0518    0.048  1.082  0.279    -0.042     0.146\n",
+            "5    TI55017    -0.3527    1.730 -0.204  0.838    -3.745     3.039\n",
+            "6    FC42428     0.0004    0.004  0.111  0.912    -0.007     0.008\n",
+            "7   AYC55580     1.5350    2.400  0.640  0.522    -3.170     6.240\n",
+            "9    TI55023     0.4212    2.273  0.185  0.853    -4.035     4.878\n",
+            "10  FFC55553   424.3005  322.428  1.316  0.188  -207.924  1056.525\n",
+            "11   FC55555     0.0005    0.006  0.080  0.937    -0.011     0.012\n",
+            "12   FC55009     0.0122    0.024  0.499  0.618    -0.036     0.060\n",
+            "13   LC55557     7.9824    4.542  1.758  0.079    -0.923    16.888\n",
+            "16  FFC55555 -1128.0375  603.887 -1.868  0.062 -2312.154    56.079\n"
           ]
         }
       ],
@@ -258,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -267,7 +281,7 @@
           "text": [
             "\n",
             "Significant Features:\n",
-            "['FFC55555', 'FC55003', 'DI55152']\n"
+            "['LC55555', 'LC55553', 'FC55003']\n"
           ]
         }
       ],
