--- a/3 Feature Selection/3.0.0 SFS_contData_all copy.ipynb
+++ b/3 Feature Selection/3.0.0 SFS_contData_all copy.ipynb
@@ -2,33 +2,25 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting statsmodels\n",
-            "  Downloading statsmodels-0.14.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (10.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.1/10.1 MB\u001b[0m \u001b[31m48.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.18 in /home/codespace/.local/lib/python3.10/site-packages (from statsmodels) (1.26.2)\n",
+            "Requirement already satisfied: statsmodels in /usr/local/python/3.10.13/lib/python3.10/site-packages (0.14.0)\n",
+            "Requirement already satisfied: numpy>=1.18 in /home/codespace/.local/lib/python3.10/site-packages (from statsmodels) (1.26.2)\n",
             "Requirement already satisfied: scipy!=1.9.2,>=1.4 in /home/codespace/.local/lib/python3.10/site-packages (from statsmodels) (1.11.3)\n",
             "Requirement already satisfied: pandas>=1.0 in /home/codespace/.local/lib/python3.10/site-packages (from statsmodels) (2.1.3)\n",
-            "Collecting patsy>=0.5.2 (from statsmodels)\n",
-            "  Downloading patsy-0.5.4-py2.py3-none-any.whl.metadata (3.4 kB)\n",
+            "Requirement already satisfied: patsy>=0.5.2 in /usr/local/python/3.10.13/lib/python3.10/site-packages (from statsmodels) (0.5.4)\n",
             "Requirement already satisfied: packaging>=21.3 in /home/codespace/.local/lib/python3.10/site-packages (from statsmodels) (23.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /home/codespace/.local/lib/python3.10/site-packages (from pandas>=1.0->statsmodels) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /home/codespace/.local/lib/python3.10/site-packages (from pandas>=1.0->statsmodels) (2023.3.post1)\n",
             "Requirement already satisfied: tzdata>=2022.1 in /home/codespace/.local/lib/python3.10/site-packages (from pandas>=1.0->statsmodels) (2023.3)\n",
             "Requirement already satisfied: six in /home/codespace/.local/lib/python3.10/site-packages (from patsy>=0.5.2->statsmodels) (1.16.0)\n",
-            "Downloading patsy-0.5.4-py2.py3-none-any.whl (233 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m233.9/233.9 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: patsy, statsmodels\n",
-            "Successfully installed patsy-0.5.4 statsmodels-0.14.0\n",
             "Note: you may need to restart the kernel to use updated packages.\n",
-            "Collecting mlxtend\n",
-            "  Downloading mlxtend-0.23.0-py3-none-any.whl.metadata (7.3 kB)\n",
+            "Requirement already satisfied: mlxtend in /usr/local/python/3.10.13/lib/python3.10/site-packages (0.23.0)\n",
             "Requirement already satisfied: scipy>=1.2.1 in /home/codespace/.local/lib/python3.10/site-packages (from mlxtend) (1.11.3)\n",
             "Requirement already satisfied: numpy>=1.16.2 in /home/codespace/.local/lib/python3.10/site-packages (from mlxtend) (1.26.2)\n",
             "Requirement already satisfied: pandas>=0.24.2 in /home/codespace/.local/lib/python3.10/site-packages (from mlxtend) (2.1.3)\n",
@@ -47,22 +39,42 @@
             "Requirement already satisfied: tzdata>=2022.1 in /home/codespace/.local/lib/python3.10/site-packages (from pandas>=0.24.2->mlxtend) (2023.3)\n",
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/codespace/.local/lib/python3.10/site-packages (from scikit-learn>=1.0.2->mlxtend) (3.2.0)\n",
             "Requirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend) (1.16.0)\n",
-            "Downloading mlxtend-0.23.0-py3-none-any.whl (1.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m19.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: mlxtend\n",
-            "Successfully installed mlxtend-0.23.0\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
       "source": [
         "%pip install statsmodels\n",
-        "%pip install mlxtend"
+        "%pip install mlxtend\n",
+        "%pip install xgboost"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting xgboost\n",
+            "  Downloading xgboost-2.0.2-py3-none-manylinux2014_x86_64.whl.metadata (2.0 kB)\n",
+            "Requirement already satisfied: numpy in /home/codespace/.local/lib/python3.10/site-packages (from xgboost) (1.26.2)\n",
+            "Requirement already satisfied: scipy in /home/codespace/.local/lib/python3.10/site-packages (from xgboost) (1.11.3)\n",
+            "Downloading xgboost-2.0.2-py3-none-manylinux2014_x86_64.whl (297.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m297.1/297.1 MB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: xgboost\n",
+            "Successfully installed xgboost-2.0.2\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -85,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -99,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -147,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "trusted": true
       },
@@ -159,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -232,10 +244,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
+        "import xgboost as xgb\n",
+        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import random\n",
+        "\n",
         "def adjusted_r2(r_squared, num_data_points, num_predictors):\n",
         "    return 1 - (1 - r_squared) * (num_data_points - 1) / (num_data_points - num_predictors - 1)\n",
         "\n",
@@ -259,29 +276,19 @@
         "        y = reordered_df[target_column]\n",
         "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
         "\n",
-        "        # Create and fit the model using SFS\n",
-        "        linreg = LinearRegression()\n",
-        "        sfs = SFS(linreg, \n",
-        "                  k_features='best', \n",
-        "                  forward=True, \n",
-        "                  floating=True, \n",
-        "                  scoring='r2',\n",
-        "                  cv=5)\n",
-        "        sfs.fit(X_train, y_train)\n",
+        "        # Create and fit the XGBoost model\n",
+        "        model = xgb.XGBRegressor(objective='reg:squarederror')\n",
+        "        model.fit(X_train, y_train)\n",
         "\n",
-        "        # Get the selected features\n",
-        "        selected_features = X_train.columns[list(sfs.k_feature_idx_)]\n",
-        "\n",
-        "        # Build the final model using selected features and evaluate it\n",
-        "        final_model = linreg.fit(X_train[selected_features], y_train)\n",
-        "        y_pred = final_model.predict(X_test[selected_features])\n",
+        "        # Make predictions\n",
+        "        y_pred = model.predict(X_test)\n",
         "\n",
         "        # Calculate performance metrics\n",
         "        r2 = r2_score(y_test, y_pred)\n",
         "        mse = mean_squared_error(y_test, y_pred)\n",
         "        rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
         "        mae = mean_absolute_error(y_test, y_pred)\n",
-        "        adj_r2 = adjusted_r2(r2, len(y_test), len(selected_features))\n",
+        "        adj_r2 = adjusted_r2(r2, len(y_test), len(X_test.columns))\n",
         "\n",
         "        # Store the result with the permutation order and performance metrics\n",
         "        results.append((ordered_features, {'R2': r2, 'MSE': mse, 'RMSE': rmse, 'MAE': mae, 'Adjusted R2': adj_r2}))\n",
@@ -309,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
